--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -2,7 +2,6 @@ body {
     background-color: rgb(29, 29, 26);
     box-sizing: border-box;
     background-image: url(../img/home2.jpg);
-    // background-position: bottom;
 }
 
 .container {
@@ -17,12 +16,16 @@ body {
     
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 768px) {
     #homeButtons {
         flex-direction: column;
     }
     .home-title {
         font-size: 3rem;
 
+    }
+
+    .container {
+        height: calc(var(--vh, 1vh) * 100);
     }
 }
